add some buttons in settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,11 @@
     <string name="buttonSaveNewData">Сохранить</string>
 
 
+    <string name="buttonDeleteDB">Сбросить базу данных</string>
+    <string name="buttonChangeConst">Настроить константы</string>
+
+
+
+
+
 </resources>
