--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,5 +55,7 @@
     <string name="alertNoDataForMonth">Данных за месяц нету</string>
 
     <string name="Greeting">Привет! Это приложения для просчета ЗП и ведения статистики о рабочих днях. Для того что бы начать пользоваться приложением заполни поля ниже! </string>
+    <string name="gasPrice">Цена топлива</string>
+    <string name="gasAmount">Кол-во топлива</string>
 
 </resources>
